demenchuk/examples/errors/parser/07_invalid_expression.riv
# PARSER ERROR: Недопустимое выражение
# Ожидаемая ошибка: extraneous input at line 7

x = 10
y = 20
# Два оператора присваивания подряд
z = = x + y
write(z)
